dev_ws/log/build_2020-11-23_18-42-30/tallest_building/stderr.log
  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_building\client_function.py", line 38
    else:
    ^
SyntaxError: invalid syntax

